--- a/chloe/create.html
+++ b/chloe/create.html
@@ -5,24 +5,39 @@
   window.onload = function () {
     const queryString = window.location.search;
     const urlParams = new URLSearchParams(queryString);
-    var operation = urlParams.get('choice1');
+    var operation = urlParams.get('operationChoice');
     document.getElementById("Operaton").innerHTML = operation;
 
+    if(operation == 'Multiplication'){
+      document.getElementById("operationSign").innerHTML = 'X';
+    }else if(operation == 'Subtraction'){
+      document.getElementById("operationSign").innerHTML = '-';
 
-    if( urlParams.get('choice2') == "Random"){
-       document.getElementById("createForm")[0].value;
+    }else if(operation == 'Addition'){
+      document.getElementById("operationSign").innerHTML = '+';
+
+    }else if(operation == 'Division'){
+      document.getElementById("operationSign").innerHTML = '÷';
+
+    }
+
+    document.getElementById("formOperation").value = operation;
+
+
+    // document.getElementById("createForm").value = operation;
+
+
+
+    if (urlParams.get('choice2') == "Random") {
+      //  document.getElementById("createForm")[0].value;
       // document.getElementById("createForm").submit(); //form submission
-
-
-      console.log("here");
+      // console.log("here");
       // window.location = "/Users/chloe/Desktop/COSC 425/local chloe/workSpace.html";
     }
   }
 
   function dataValidation(e) {
-    // alert("here1");
     var MAX_NUM = 6;
-    // var pwd = "/Users/chloe/Desktop/COSC 425/local chloe/";
 
 
     var leftN = document.getElementById("leftNumerator").value;
@@ -47,16 +62,15 @@
     }
 
     // error checks if num 1-6 denom 2-6 
-    // TODO this needs to be double checked
     if (
       (leftN <= 0 || leftN > MAX_NUM) ||
       (leftD <= 1 || leftD > MAX_NUM) ||
       (rightN <= 0 || rightN > MAX_NUM) ||
       (rightD <= 1 || rightD > MAX_NUM)
     ) {
-      if(rightD ==1 ||leftD ==1){
+      if (rightD == 1 || leftD == 1) {
         alert("Denominator cannot be 1.");
-      }else{
+      } else {
         alert("Error enter a number from 1-6");
 
       }
@@ -80,26 +94,38 @@
 
 <head>
   <title>Fraction Visualizer</title>
+  <link rel="stylesheet" href="create.css">
+
 </head>
 <h1> <span id="Operaton"></span></h1>
 
 <body>
-  <form method="get" id="createForm" action="workspace.html">
+  <div class="content">
 
-    <div>
-      <input type="text" id="leftNumerator" name="leftNum" /><br />
-      <input type="text" id="leftDenominator" name="rightDenom" /><br />
-    </div>
+    <form method="get" id="createForm" action="workspace.html">
+      <!-- <input id = "Operation"  name="choice1" /><br /> -->
 
-    <br><br>
-    <div>
-      <input type="text" id="rightNumerator" name="rightNum" /><br />
-      <input type="text" id="rightDenominator" name="leftdenom" /><br />
-    </div>
+      <div class="top_fractionContainer">
+        <input type="text" id="leftNumerator" name="leftNum" /><br />
+        <input type="text" id="rightNumerator" name="rightNum" /><br />
+      </div>
 
-    <div>
-      <button type="submit" onclick="dataValidation(event)">Start</button>
-    </div>
+      <div class="signContainer">
+        <span id = operationSign> </span>
+     </div>
+
+      
+      <div class="bottom_fractionContainer">
+        <input type="text" id="leftDenominator" name="leftDenom" /><br />
+        <input type="text" id="rightDenominator" name="rightDenom" /><br />
+      </div>
+
+      <input type="hidden" id="formOperation" name="operationChoice" value=""/>
+
+      <div class="submitContainer">
+        <button type="submit" class = 'submitButton' onclick="dataValidation(event)">Submit</button>
+      </div>
+  </div>
 
   </form>
 
